feat(appointment): adding appointment section on event

--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -15,8 +15,8 @@
   --white-5: #F8F8FF;
   --white-0: #ffffff;
 
-  --grey-10: #F6FAFD;
-  --grey-50: #9CB0C0;
-  --grey-70: #7E92A2;
+  --gray-10: #F6FAFD;
+  --gray-50: #9CB0C0;
+  --gray-70: #7E92A2;
 
 }
